syntax = "proto3";

option go_package = "protobuf/protogen/basic";

//Backup User Content V1
message userContent {
  uint32 user_content_id = 1;
  string slug = 2;
  string title = 3;
  string html_content = 4;
  uint32 author_id = 5;
}

//Backups User Content v2
//message userContent {
//  uint32 user_content_id = 1;
//  string slug = 2;
//  string title = 3;
//  string html_content = 4;
//  uint32 author_id = 5;
//  string category = 6;
//}

//Backup User Content v3
//message userContent {
//  uint32 user_content_id = 1;
//  string slug = 2;
//  string html_content = 4;
//  string category = 6;
//  string subcategory = 7;
//}